[package]
name = "spreading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"], default-features = false }
bevy_pixels = "0.12"
noise = { version = "0.8.2", features = ["images"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
