[package]
name = "spreading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[dependencies]
bevy = { version = "0.12", features = ["bevy_asset", "bevy_audio", "vorbis"], default-features = false }
bevy_pixels = "0.12"
noise = { version = "0.8.2", features = ["images"] }
rand = "0.8.5"
